--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,10 @@
-<router-outlet />
+<header class="app-header">
+  <nav class="app-nav">
+    <a routerLink="/">Home</a>
+    <a routerLink="/seasons">Seasons</a>
+  </nav>
+</header>
+
+<main class="app-main">
+  <router-outlet />
+</main>
