feat(STAF-110): add global navbar component and update app layout

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,4 @@
-<header class="app-header">
-  <nav class="app-nav">
-    <a routerLink="/">Home</a>
-    <a routerLink="/seasons">Seasons</a>
-  </nav>
-</header>
-
+<app-navbar />
 <main class="app-main">
   <router-outlet />
 </main>
