--- a/src/app/features/seasons/components/edit/season-edit.component.html
+++ b/src/app/features/seasons/components/edit/season-edit.component.html
@@ -3,28 +3,25 @@
     <h1 class="season-edit__title">Edit Season</h1>
     <div class="season-edit__actions">
       <button tuiButton type="button" (click)="navigateToDetail()">Cancel</button>
-      <button tuiButton type="submit" (click)="onSubmit()" [disabled]="seasonForm.invalid">Update Season</button>
+      <button tuiButton type="submit" (click)="onSubmit()" [disabled]="seasonForm().invalid()">Update Season</button>
     </div>
   </header>
 
-  <form [formGroup]="seasonForm" class="season-edit__form">
+  <form class="season-edit__form">
     <div class="season-edit__field">
       <label for="year" class="season-edit__label">Year *</label>
       <input
         id="year"
-        type="number"
-        formControlName="year"
+        type="text"
+        [field]="seasonForm.year"
         class="season-edit__input"
-        [class.season-edit__input--invalid]="yearControl?.invalid && yearControl?.touched"
+        [class.season-edit__input--invalid]="seasonForm.year().touched() && seasonForm.year().invalid()"
       />
-      @if (yearControl?.invalid && yearControl?.touched) {
-        @if (yearControl?.errors?.['required']) {
-          <div class="season-edit__error">Year is required</div>
-        }
-        @if (yearControl?.errors?.['min']) {
+      @if (seasonForm.year().touched() && seasonForm.year().invalid()) {
+        @if (seasonForm.year().errors()[0]?.message === 'Year must be at least 1900') {
           <div class="season-edit__error">Year must be at least 1900</div>
         }
-        @if (yearControl?.errors?.['max']) {
+        @if (seasonForm.year().errors()[0]?.message === 'Year must be at most 2999') {
           <div class="season-edit__error">Year must be at most 2999</div>
         }
       }
@@ -34,7 +31,7 @@
       <label for="description" class="season-edit__label">Description</label>
       <textarea
         id="description"
-        formControlName="description"
+        [field]="seasonForm.description"
         class="season-edit__textarea"
         rows="4"
         placeholder="Enter a description for season (optional)"
