feat: wrap app content with TuiRoot component
- Import TuiRoot from @taiga-ui/core
- Add TuiRoot to component imports array
- Remove manual TUI_DARK_MODE provider
- Wrap app content with <tui-root> in template

Fixes: STAF-132

--- a/src/app/features/tournaments/components/create/tournament-create.component.html
+++ b/src/app/features/tournaments/components/create/tournament-create.component.html
@@ -9,7 +9,7 @@
       </div>
     }
     <div class="tournament-create__actions">
-      <button tuiButton type="button" (click)="navigateBack()">Cancel</button>
+      <button tuiButton type="button" (click)="cancel()">Cancel</button>
       <button tuiButton type="submit" (click)="onSubmit()" [disabled]="tournamentForm.invalid">Create Tournament</button>
     </div>
   </header>
