--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,6 @@
-<app-navbar />
-<main class="app-main">
-  <router-outlet />
-</main>
+<tui-root>
+  <app-navbar />
+  <main class="app-main">
+    <router-outlet />
+  </main>
+</tui-root>
