--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -6,70 +6,52 @@
   } @else if (error()) {
     <div class="error">Error loading persons</div>
   } @else {
-    <div class="controls">
-      <label for="itemsPerPage">Items per page:</label>
-      <select id="itemsPerPage" (change)="changeItemsPerPage($any($event.target).value)">
-        @for (option of itemsPerPageOptions; track option) {
-          <option [value]="option" [selected]="itemsPerPage() === option">{{ option }}</option>
-        }
-      </select>
-    </div>
-
-    <table class="person-table">
+    <table
+      tuiTable
+      [columns]="columns"
+      [direction]="sortDirection()"
+      [tuiSortBy]="sortBy()"
+      (tuiSortChange)="onSortChange($event)">
       <thead>
-        <tr>
-          <th (click)="toggleSort('first_name')">
-            First Name {{ getSortIcon('first_name') }}
+        <tr tuiThGroup>
+          <th *tuiHead="'first_name'" tuiSortable tuiTh>
+            First Name
           </th>
-          <th (click)="toggleSort('second_name')">
-            Second Name {{ getSortIcon('second_name') }}
+          <th *tuiHead="'second_name'" tuiSortable tuiTh>
+            Second Name
           </th>
-          <th>Photo</th>
+          <th *tuiHead="'person_photo_url'" tuiTh [sorter]="null">
+            Photo
+          </th>
         </tr>
       </thead>
-      <tbody>
-        @if (paginatedPersons().length === 0) {
-          <tr>
-            <td colspan="3">No persons found</td>
+      <tbody tuiTbody [data]="sortedPersons()">
+        @for (person of sortedPersons(); track person.id) {
+          <tr tuiTr>
+            <td *tuiCell="'first_name'" tuiTd>{{ person.first_name }}</td>
+            <td *tuiCell="'second_name'" tuiTd>{{ person.second_name }}</td>
+            <td *tuiCell="'person_photo_url'" tuiTd>
+              @if (person.person_photo_url) {
+                <img [src]="person.person_photo_url" alt="{{ person.first_name }} {{ person.second_name }}" />
+              } @else {
+                <span>No photo</span>
+              }
+            </td>
           </tr>
-        } @else {
-          @for (person of paginatedPersons(); track person.id) {
-            <tr>
-              <td>{{ person.first_name }}</td>
-              <td>{{ person.second_name }}</td>
-              <td>
-                @if (person.person_photo_url) {
-                  <img [src]="person.person_photo_url" alt="{{ person.first_name }} {{ person.second_name }}" />
-                } @else {
-                  <span>No photo</span>
-                }
-              </td>
-            </tr>
-          }
         }
       </tbody>
+      <tfoot>
+        <tr>
+          <td [colSpan]="columns.length">
+            <tui-table-pagination
+              [items]="itemsPerPageOptions"
+              [page]="page()"
+              [size]="size()"
+              [total]="sortedPersons().length"
+              (paginationChange)="onPaginationChange($event)" />
+          </td>
+        </tr>
+      </tfoot>
     </table>
-
-    @if (totalPages() > 1) {
-      <div class="pagination">
-        <button
-          tuiButton
-          type="button"
-          (click)="changePage(currentPage() - 1)"
-          [disabled]="currentPage() === 1">
-          Previous
-        </button>
-
-        <span>Page {{ currentPage() }} of {{ totalPages() }}</span>
-
-        <button
-          tuiButton
-          type="button"
-          (click)="changePage(currentPage() + 1)"
-          [disabled]="currentPage() === totalPages()">
-          Next
-        </button>
-      </div>
-    }
   }
 </div>
