--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -25,8 +25,8 @@
           </th>
         </tr>
       </thead>
-      <tbody tuiTbody [data]="sortedPersons()">
-        @for (person of sortedPersons(); track person.id) {
+      <tbody tuiTbody [data]="paginatedPersons()">
+        @for (person of paginatedPersons(); track person.id) {
           <tr tuiTr>
             <td *tuiCell="'first_name'" tuiTd>{{ person.first_name }}</td>
             <td *tuiCell="'second_name'" tuiTd>{{ person.second_name }}</td>
