--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -1,57 +1,94 @@
 <div class="person-list">
-  <h1>Persons</h1>
+  <div class="header">
+    <h1>Persons</h1>
+    <div class="sort-controls">
+      <button
+        type="button"
+        appearance="flat"
+        size="s"
+        tuiButton
+        class="sort-button"
+        (click)="toggleSort('first_name')"
+      >
+        First Name
+        <tui-icon
+          class="sort-icon"
+          [icon]="getSortIcon('first_name')"
+          [class.active]="sortBy() === 'first_name'"
+        />
+      </button>
+      <button
+        type="button"
+        appearance="flat"
+        size="s"
+        tuiButton
+        class="sort-button"
+        (click)="toggleSort('second_name')"
+      >
+        Second Name
+        <tui-icon
+          class="sort-icon"
+          [icon]="getSortIcon('second_name')"
+          [class.active]="sortBy() === 'second_name'"
+        />
+      </button>
+    </div>
+  </div>
 
   @if (loading()) {
-    <div class="loading">Loading persons...</div>
+    <div class="loading">
+      <tui-loader size="l" />
+    </div>
   } @else if (error()) {
     <div class="error">Error loading persons</div>
+  } @else if (persons().length === 0) {
+    <div class="empty">No persons found</div>
   } @else {
-    <table
-      tuiTable
-      [columns]="columns"
-      [direction]="sortDirection()"
-      [tuiSortBy]="sortBy()"
-      (tuiSortChange)="onSortChange($event)">
-      <thead>
-        <tr tuiThGroup>
-          <th *tuiHead="'first_name'" tuiSortable tuiTh>
-            First Name
-          </th>
-          <th *tuiHead="'second_name'" tuiSortable tuiTh>
-            Second Name
-          </th>
-          <th *tuiHead="'person_photo_url'" tuiTh [sorter]="null">
-            Photo
-          </th>
-        </tr>
-      </thead>
-      <tbody tuiTbody [data]="paginatedPersons()">
-        @for (person of paginatedPersons(); track person.id) {
-          <tr tuiTr>
-            <td *tuiCell="'first_name'" tuiTd>{{ person.first_name }}</td>
-            <td *tuiCell="'second_name'" tuiTd>{{ person.second_name }}</td>
-            <td *tuiCell="'person_photo_url'" tuiTd>
-              @if (person.person_photo_url) {
-                <img [src]="person.person_photo_url" alt="{{ person.first_name }} {{ person.second_name }}" />
-              } @else {
-                <span>No photo</span>
-              }
-            </td>
-          </tr>
-        }
-      </tbody>
-      <tfoot>
-        <tr>
-          <td [colSpan]="columns.length">
-            <tui-table-pagination
-              [items]="itemsPerPageOptions"
-              [page]="page()"
-              [size]="size()"
-              [total]="sortedPersons().length"
-              (paginationChange)="onPaginationChange($event)" />
-          </td>
-        </tr>
-      </tfoot>
-    </table>
+    <div class="cards-grid">
+      @for (person of persons(); track person.id) {
+        <div class="person-card" tuiAppearance="neutral" tuiCardMedium>
+          <tui-avatar
+            size="l"
+            [src]="person.person_photo_url || null"
+            [round]="true"
+          >
+            @if (!person.person_photo_url) {
+              {{ person.first_name[0] }}{{ person.second_name[0] }}
+            }
+          </tui-avatar>
+          <div class="person-info">
+            <h3 tuiTitle>
+              {{ person.first_name }}
+              <span tuiSubtitle>{{ person.second_name }}</span>
+            </h3>
+          </div>
+        </div>
+      }
+    </div>
+
+    @if (totalPages() > 1) {
+      <div class="pagination-wrapper">
+        <div class="items-per-page">
+          <span>Items per page:</span>
+          @for (option of itemsPerPageOptions; track option) {
+            <button
+              type="button"
+              class="items-option"
+              [class.active]="itemsPerPage() === option"
+              (click)="onItemsPerPageChange(option)"
+            >
+              {{ option }}
+            </button>
+          }
+        </div>
+        <div class="pagination">
+          <tui-pagination
+            [length]="totalPages()"
+            [index]="page() - 1"
+            (indexChange)="onPageChange($event)"
+          />
+        </div>
+      </div>
+    }
   }
 </div>
