feat(auth): add registration system with modern UI and auth buttons component

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -38,7 +38,7 @@
       </div>
     </nav>
     <div class="navbar-auth">
-      <app-login-icon />
+      <app-auth-buttons />
     </div>
   </div>
 </header>
